--- a/kettle-n-java/kettle-java-exec/pom.xml
+++ b/kettle-n-java/kettle-java-exec/pom.xml
@@ -29,9 +29,10 @@
 		<dependency>
 			<groupId>jdk.tools</groupId>
 			<artifactId>jdk.tools</artifactId>
-			<version>jdk1.7.0_65</version>
+			<version>jdk1.7.0_80</version>
 			<scope>system</scope>
-			<systemPath>${java.home}/lib/tools.jar</systemPath>
+			<!-- <systemPath>${java.home}/lib/tools.jar</systemPath> -->
+			<systemPath>C:/Program Files/Java/jdk1.7.0_80/lib/tools.jar</systemPath>
 		</dependency>
 
 		<!-- Pentaho Kettle Core dependencies development -->
@@ -67,6 +68,40 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-902.jdbc4</version>
 		</dependency>
+
+		<!-- required for Slave/carte -->
+		
+		 <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-core</artifactId>
+      <version>1.19</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.19</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-bundle</artifactId>
+      <version>1.19</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>test</scope>
+	</dependency>
+
 
 	</dependencies>
 	
